# pcl-example

./: README.md
Cylinder_model_segmentation/: CMakeLists.txt  main.cpp  readme.md
Euclidean_cluster_extreaction/: CMakeLists.txt  main.cpp  readme.md
Extracting_indices_from_a_PointCloud/: CMakeLists.txt  main.cpp  readme.md
Interactive_iterative_closest_point/: CMakeLists.txt  monkey.ply  readme.md
Plane_model_segmentation/: CMakeLists.txt  main.cpp  readme.md
Removing_outliers_using_a_Condition_or_RadiusOutlier_removal/: CMakeLists.txt  main.cpp  readme.md
